--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "af-virtual-scroll": "^2.3.8",
     "async": "^3.2.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
@@ -21,6 +22,7 @@
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scrollbars-custom": "^4.0.25",
     "react-select": "^3.1.1",
     "react-spring": "^8.0.27",
     "react-webcam": "^5.2.2",
