--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
+    "@react-pdf/renderer": "^1.6.12",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -19,6 +20,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-pdf": "^5.0.0",
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -26,6 +28,7 @@
     "react-select": "^3.1.1",
     "react-spring": "^8.0.27",
     "react-webcam": "^5.2.2",
+    "reactjs-popup": "^2.0.4",
     "video-react": "^0.14.1",
     "web-vitals": "^0.2.4"
   },
