added more stuff

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.16.1",
+    "downloadbutton": "^1.0.0",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
