--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "my-project-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
+    "@date-io/date-fns": "^2.10.6",
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
-    "@react-pdf/renderer": "^1.6.12",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -17,9 +18,11 @@
     "date-fns": "^2.16.1",
     "downloadbutton": "^1.0.0",
     "lodash": "^4.17.20",
+    "netlify-cli": "^2.69.11",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-pdf": "^5.0.0",
     "react-player": "^2.7.0",
