--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_LOCAL=http://localhost:3000
 REACT_APP_DEPLOYED=https://junior-coder.herokuapp.com
+
+token = qU0AesFDjGTnUIvibO13zfWKthy7dV4DRno8T_lTtXU
