--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_LOCAL=http://localhost:3000
 REACT_APP_DEPLOYED=https://junior-coder.herokuapp.com
 
+NETLIFY_AUTH_TOKEN = Dzn3_gNtIbszE5bN4foJVy8ERKmjrVDLieYekzhZfDY
+
