--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.4.0",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.1",
+    "react-magnifier": "^3.0.4",
     "react-pdf": "^5.0.0",
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
